// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CampaignWallChart characterization > build-list-open: ?buildList=1 1`] = `
{
  "a11y": [
    "Acme Group",
    "Acme North",
    "Acme South",
    "Build list",
    "Build list panel",
    "Campaign summary",
    "Close build list panel",
    "Drag entire unit Acme Group into the build list",
    "Drag entire unit Acme North into the build list",
    "Drag entire unit Acme South into the build list",
    "Drag entire unit Port Alpha into the build list",
    "Drag entire unit Unassigned workers into the build list",
    "Drop zone — drop worker tiles or unit cards to add to the list",
    "Expand assessment distribution",
    "Expand unit",
    "In multiple organising units",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Port Alpha",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Show unit summary",
    "Unassigned workers",
    "Union member (other union)",
    "Unit actions",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_rating@Lena Lane:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Cumulative | expanded=false | state=closed",
        "Any supportive rating | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (5) | expanded=false | state=closed",
        "Expand all",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
      ],
      "header": "1 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=100%",
        "Em=0%",
        "Lead=—",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=3.0",
        "Participation (supportive)=0%",
        "Workers=1",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 3: 1 (100%)",
      "tiles": [
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to select, double-click to open, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned workers",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Unit view | pressed=true",
        "Select all",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "1 named / 8 est.",
      "level": 0,
      "metrics": [],
      "overflow": null,
      "placeholders": 7,
      "ratingsBar": null,
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "10",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to select, double-click to open, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
      ],
      "title": "Acme Group",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Expand unit | expanded=false",
        "Add worker",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Expand unit | expanded=false",
        "Add worker",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Add worker",
        "Select all",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "6 named / 6 est.",
      "level": 0,
      "metrics": [
        "Ph=67%",
        "Em=67%",
        "Lead=—",
        "Net=17%",
        "Members=67%",
        "OA Members=50%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "MUA=1",
        "Avg rating=3.5",
        "Participation (supportive)=17%",
        "Workers=6",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 2: 1 (17%) | Rating 4–5: 1 (17%) | Unrated: 4 (67%)",
      "tiles": [
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to select, double-click to open, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to select, double-click to open, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Also in: Acme North. Click to select, double-click to open, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to select, double-click to open, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to select, double-click to open, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to select, double-click to open, right-click to move/copy.",
          "worker": "111 Kim King",
        },
      ],
      "title": "Port Alpha",
      "type": "Worksite",
    },
  ],
  "controls": [
    "Close build list panel",
    "Choose later | expanded=false | state=closed",
    "Email | disabled",
    "Phone | disabled",
    "Activist task | disabled",
    "SMS | disabled",
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=5",
    "top-level-units=3",
    "tiles=8",
    "placeholders=7",
    "bands=[Employer· 1 unit, Worksite· 1 unit]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["wallchart-activities-list","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["wallchart-task-lists-list","1"]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:5",
    "build-list:open",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChart characterization > count-mode: stored display mode is counts, not percentages 1`] = `
{
  "a11y": [
    "Acme Group",
    "Acme North",
    "Acme South",
    "Campaign summary",
    "Expand assessment distribution",
    "Expand unit",
    "In multiple organising units",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Port Alpha",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Show unit summary",
    "Unassigned workers",
    "Union member (other union)",
    "Unit actions",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_rating@Lena Lane:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Cumulative | expanded=false | state=closed",
        "Any supportive rating | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=false",
        "# | pressed=true",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (5) | expanded=false | state=closed",
        "Expand all",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=9",
        "OA Members=8",
        "Delegates=1",
        "Activists=1",
        "Contacts=1",
        "HSRs=1",
        "Bargaining reps=1",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=3",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
      ],
      "header": "1 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=100%",
        "Em=0%",
        "Lead=—",
        "Members=1",
        "OA Members=1",
        "Delegates=0",
        "Activists=0",
        "Contacts=0",
        "HSRs=0",
        "Bargaining reps=0",
        "Avg rating=3.0",
        "Participation (supportive)=0",
        "Workers=1",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 3: 1 (100%)",
      "tiles": [
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned workers",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Unit view | pressed=true",
        "Select all",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "1 named / 8 est.",
      "level": 0,
      "metrics": [],
      "overflow": null,
      "placeholders": 7,
      "ratingsBar": null,
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "10",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
      ],
      "title": "Acme Group",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Expand unit | expanded=false",
        "Add worker",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Expand unit | expanded=false",
        "Add worker",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Add worker",
        "Select all",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "6 named / 6 est.",
      "level": 0,
      "metrics": [
        "Ph=67%",
        "Em=67%",
        "Lead=—",
        "Net=17%",
        "Members=4",
        "OA Members=3",
        "Delegates=0",
        "Activists=0",
        "Contacts=0",
        "HSRs=0",
        "Bargaining reps=0",
        "MUA=1",
        "Avg rating=3.5",
        "Participation (supportive)=1",
        "Workers=6",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 2: 1 (17%) | Rating 4–5: 1 (17%) | Unrated: 4 (67%)",
      "tiles": [
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Also in: Acme North. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
      ],
      "title": "Port Alpha",
      "type": "Worksite",
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=5",
    "top-level-units=3",
    "tiles=8",
    "placeholders=7",
    "bands=[Employer· 1 unit, Worksite· 1 unit]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["wallchart-activities-list","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["wallchart-task-lists-list","1"]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:5",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChart characterization > default: structural skeleton 1`] = `
"<div>
  <div>
    <div>
    <p>
      <span>
  <div>
    <div aria-hidden="true">
    <div>
      <div>
        <div>
          <div>
            <div>
              <label>
              <button aria-autocomplete="none" aria-controls="radix-_r_3u_" aria-expanded="false" data-state="closed" role="combobox">
          <div>
            <div>
              <h2>
              <p>
            <div>
              <button aria-autocomplete="none" aria-controls="radix-_r_3v_" aria-expanded="false" data-state="closed" role="combobox">
              <div>
              <div>
              <button aria-pressed="false">
              <div>
        <div>
          <div>
            <div aria-label="Rating distribution">
              <div>
              <div>
              <div>
              <div>
              <div>
            <div>
              <span>
              <span>
              <span>
            <div>
              <span>
              <span>
              <span>
              <span>
              <span>
              <span>
              <span>
            <div>
              <span>
            <div>
              <span>
              <span>
              <span>
    <div>
      <div>
        <div>
          <div data-ou-id="unassigned">
            <div>
              <div>
              <div>
          <div>
            <div>
              <span>
              <span>
              <div>
            <div data-ou-id="10">
              <div>
          <div>
            <div>
              <span>
              <span>
              <div>
            <div data-ou-id="20">
              <div>
      <div>
        <div>
          <div>
            <div>
            <div>
              <div>
              <button aria-label="Expand assessment distribution">
          <div>
            <div>
              <h4>
              <div>
    <button>"
`;

exports[`CampaignWallChart characterization > default: writable, hint dismissed, no query string 1`] = `
{
  "a11y": [
    "Acme Group",
    "Acme North",
    "Acme South",
    "Campaign summary",
    "Expand assessment distribution",
    "Expand unit",
    "In multiple organising units",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Port Alpha",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Show unit summary",
    "Unassigned workers",
    "Union member (other union)",
    "Unit actions",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_rating@Lena Lane:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Cumulative | expanded=false | state=closed",
        "Any supportive rating | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (5) | expanded=false | state=closed",
        "Expand all",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
      ],
      "header": "1 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=100%",
        "Em=0%",
        "Lead=—",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=3.0",
        "Participation (supportive)=0%",
        "Workers=1",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 3: 1 (100%)",
      "tiles": [
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned workers",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Unit view | pressed=true",
        "Select all",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "1 named / 8 est.",
      "level": 0,
      "metrics": [],
      "overflow": null,
      "placeholders": 7,
      "ratingsBar": null,
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "10",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
      ],
      "title": "Acme Group",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Expand unit | expanded=false",
        "Add worker",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Expand unit | expanded=false",
        "Add worker",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Add worker",
        "Select all",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "6 named / 6 est.",
      "level": 0,
      "metrics": [
        "Ph=67%",
        "Em=67%",
        "Lead=—",
        "Net=17%",
        "Members=67%",
        "OA Members=50%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "MUA=1",
        "Avg rating=3.5",
        "Participation (supportive)=17%",
        "Workers=6",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 2: 1 (17%) | Rating 4–5: 1 (17%) | Unrated: 4 (67%)",
      "tiles": [
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Also in: Acme North. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
      ],
      "title": "Port Alpha",
      "type": "Worksite",
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=5",
    "top-level-units=3",
    "tiles=8",
    "placeholders=7",
    "bands=[Employer· 1 unit, Worksite· 1 unit]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["wallchart-activities-list","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["wallchart-task-lists-list","1"]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:5",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChart characterization > hidden-unit: one unit hidden via stored visibility 1`] = `
{
  "a11y": [
    "Acme Group",
    "Acme North",
    "Acme South",
    "Campaign summary",
    "Expand assessment distribution",
    "Expand unit",
    "No email. Open worker details, focus email.",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Show unit summary",
    "Unassigned workers",
    "Unit actions",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_rating@Lena Lane:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Cumulative | expanded=false | state=closed",
        "Any supportive rating | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (4/5) | expanded=false | state=closed",
        "Expand all",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
      ],
      "header": "1 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=100%",
        "Em=0%",
        "Lead=—",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=3.0",
        "Participation (supportive)=0%",
        "Workers=1",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 3: 1 (100%)",
      "tiles": [
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned workers",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Unit view | pressed=true",
        "Select all",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "1 named / 8 est.",
      "level": 0,
      "metrics": [],
      "overflow": null,
      "placeholders": 7,
      "ratingsBar": null,
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "10",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
      ],
      "title": "Acme Group",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Expand unit | expanded=false",
        "Add worker",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Expand unit | expanded=false",
        "Add worker",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme South",
      "type": "Employer",
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=4",
    "top-level-units=2",
    "tiles=2",
    "placeholders=7",
    "bands=[]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["wallchart-activities-list","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["wallchart-task-lists-list","1"]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:4",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChart characterization > hint-visible: rating hint not yet dismissed 1`] = `
{
  "a11y": [
    "Acme Group",
    "Acme North",
    "Acme South",
    "Campaign summary",
    "Expand assessment distribution",
    "Expand unit",
    "In multiple organising units",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Port Alpha",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Show unit summary",
    "Unassigned workers",
    "Union member (other union)",
    "Unit actions",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_rating@Lena Lane:visible dismiss=[Got it]",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Cumulative | expanded=false | state=closed",
        "Any supportive rating | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "Units (5) | expanded=false | state=closed",
        "Expand all",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
      ],
      "header": "1 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=100%",
        "Em=0%",
        "Lead=—",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=3.0",
        "Participation (supportive)=0%",
        "Workers=1",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 3: 1 (100%)",
      "tiles": [
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned workers",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Unit view | pressed=true",
        "Select all",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "1 named / 8 est.",
      "level": 0,
      "metrics": [],
      "overflow": null,
      "placeholders": 7,
      "ratingsBar": null,
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "10",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
      ],
      "title": "Acme Group",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Expand unit | expanded=false",
        "Add worker",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Expand unit | expanded=false",
        "Add worker",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Rate 1 — Extremely strong",
        "Rate 2 — Strong",
        "Rate 3 — Mediocre",
        "Rate 4 — Weak",
        "Rate 5 — Hostile",
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Add worker",
        "Select all",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
        "Unit actions | expanded=false | state=closed",
      ],
      "header": "6 named / 6 est.",
      "level": 0,
      "metrics": [
        "Ph=67%",
        "Em=67%",
        "Lead=—",
        "Net=17%",
        "Members=67%",
        "OA Members=50%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "MUA=1",
        "Avg rating=3.5",
        "Participation (supportive)=17%",
        "Workers=6",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 2: 1 (17%) | Rating 4–5: 1 (17%) | Unrated: 4 (67%)",
      "tiles": [
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Also in: Acme North. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "20",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
      ],
      "title": "Port Alpha",
      "type": "Worksite",
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=5",
    "top-level-units=3",
    "tiles=8",
    "placeholders=7",
    "bands=[Employer· 1 unit, Worksite· 1 unit]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["wallchart-activities-list","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["wallchart-task-lists-list","1"]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:5",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChart characterization > no-units: campaign with no organising units 1`] = `
{
  "a11y": [
    "Campaign summary",
    "Expand assessment distribution",
    "Health and Safety Representative",
    "MUA: Maritime Union",
    "No email. Open worker details, focus email.",
    "No phone. Open worker details, focus phone.",
    "Petition ask",
    "Quick-rate Ada Adams. Click to select an assessment and rating.",
    "Quick-rate Ben Baker. Click to select an assessment and rating.",
    "Quick-rate Cara Carter. Click to select an assessment and rating.",
    "Quick-rate Dan Dawson. Click to select an assessment and rating.",
    "Quick-rate Eve Evans. Click to select an assessment and rating.",
    "Quick-rate Finn Foster. Click to select an assessment and rating.",
    "Quick-rate Gina Grant. Click to select an assessment and rating.",
    "Quick-rate Hugo Hall. Click to select an assessment and rating.",
    "Quick-rate Ida Irwin. Click to select an assessment and rating.",
    "Quick-rate Jack Jones. Click to select an assessment and rating.",
    "Quick-rate Kim King. Click to select an assessment and rating.",
    "Quick-rate Lena Lane. Click to select an assessment and rating.",
    "Rating distribution",
    "Unassigned workers",
    "Union member (other union)",
    "email on file. Open worker details, focus email.",
    "phone on file. Open worker details, focus phone.",
  ],
  "anchors": [
    "wall_chart_rating@Ada Adams:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Cumulative | expanded=false | state=closed",
        "Any supportive rating | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Add worker",
        "Import Workers",
        "New unit",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
      ],
      "header": "12 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [
        {
          "badge": "1",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "101 Ada Adams",
        },
        {
          "badge": "2",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ben Baker. Cumulative 2, last activity 2. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "102 Ben Baker",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Cara Carter. Cumulative 3, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "103 Cara Carter",
        },
        {
          "badge": "4",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Dan Dawson. Cumulative 4, last activity 4. Health and Safety Representative. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "104 Dan Dawson",
        },
        {
          "badge": "5",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "3",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "107 Gina Grant",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Hugo Hall. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "108 Hugo Hall",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "111 Kim King",
        },
        {
          "badge": "—",
          "disabled": false,
          "draggable": true,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —. Click to open, ⌘/Ctrl-click to select, Shift-click to add, right-click to move/copy.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned workers",
      "type": null,
    },
  ],
  "controls": [
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=1",
    "top-level-units=1",
    "tiles=12",
    "placeholders=0",
    "bands=[]",
    "empty-state=Add organising units to group workers into frames on the wall chart. Until then, members appear under unassigned above (if any). Use New unit above when you have access.",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["wallchart-activities-list","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["wallchart-task-lists-list","1"]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:1",
    "charts",
    "dialogs:none",
  ],
}
`;

exports[`CampaignWallChart characterization > read-only: canWrite false 1`] = `
{
  "a11y": [
    "Acme Group",
    "Acme North",
    "Acme South",
    "Campaign summary",
    "Expand assessment distribution",
    "Expand unit",
    "In multiple organising units",
    "MUA: Maritime Union",
    "No email.",
    "No phone.",
    "Petition ask",
    "Port Alpha",
    "Rate 1 — Extremely strong",
    "Rate 2 — Strong",
    "Rate 3 — Mediocre",
    "Rate 4 — Weak",
    "Rate 5 — Hostile",
    "Rating distribution",
    "Show unit summary",
    "Unassigned workers",
    "Union member (other union)",
    "email on file.",
    "phone on file.",
  ],
  "anchors": [
    "wall_chart_rating@Lena Lane:hidden",
  ],
  "cards": [
    {
      "assessing": null,
      "controls": [
        "Cumulative | expanded=false | state=closed",
        "Any supportive rating | expanded=false | state=closed",
        "Badges: none | expanded=false | state=closed",
        "% | pressed=true",
        "# | pressed=false",
        "Links | pressed=false",
        "Find worker | expanded=false | state=closed",
        "Units (5) | expanded=false | state=closed",
        "Expand all",
      ],
      "header": null,
      "level": 0,
      "metrics": [
        "Ph=58%",
        "Em=50%",
        "Lead=1:4",
        "Members=75%",
        "OA Members=67%",
        "Delegates=8%",
        "Activists=8%",
        "Contacts=8%",
        "HSRs=8%",
        "Bargaining reps=8%",
        "MUA=1",
        "Avg rating=2.9",
        "Participation (supportive)=25%",
        "Workers=12",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 1: 1 (8%) | Rating 2: 2 (17%) | Rating 3: 2 (17%) | Rating 4–5: 2 (17%) | Unrated: 5 (42%)",
      "tiles": [],
      "title": "Campaign summary",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
      ],
      "header": "1 named · 8 unfilled",
      "level": 0,
      "metrics": [
        "Ph=100%",
        "Em=0%",
        "Lead=—",
        "Members=100%",
        "OA Members=100%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "Avg rating=3.0",
        "Participation (supportive)=0%",
        "Workers=1",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 3: 1 (100%)",
      "tiles": [
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "",
          "selected": false,
          "title": "Lena Lane. Cumulative 3, last activity —.",
          "worker": "112 Lena Lane",
        },
      ],
      "title": "Unassigned workers",
      "type": null,
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong | disabled",
        "Rate 2 — Strong | disabled",
        "Rate 3 — Mediocre | disabled",
        "Rate 4 — Weak | disabled",
        "Rate 5 — Hostile | disabled",
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Unit view | pressed=true",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
      ],
      "header": "1 named / 8 est.",
      "level": 0,
      "metrics": [],
      "overflow": null,
      "placeholders": 7,
      "ratingsBar": null,
      "tiles": [
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "10",
          "selected": false,
          "title": "Ada Adams. Cumulative 1, last activity 1.",
          "worker": "101 Ada Adams",
        },
      ],
      "title": "Acme Group",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong | disabled",
        "Rate 2 — Strong | disabled",
        "Rate 3 — Mediocre | disabled",
        "Rate 4 — Weak | disabled",
        "Rate 5 — Hostile | disabled",
        "Expand unit | expanded=false",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme North",
      "type": "Employer",
    },
    {
      "assessing": null,
      "controls": [
        "Show unit summary | expanded=false",
        "Rate 1 — Extremely strong | disabled",
        "Rate 2 — Strong | disabled",
        "Rate 3 — Mediocre | disabled",
        "Rate 4 — Weak | disabled",
        "Rate 5 — Hostile | disabled",
        "Expand unit | expanded=false",
      ],
      "header": null,
      "level": 1,
      "metrics": [],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": null,
      "tiles": [],
      "title": "Acme South",
      "type": "Employer",
    },
    {
      "assessing": "Assessing: Cumulative",
      "controls": [
        "Rate 1 — Extremely strong | disabled",
        "Rate 2 — Strong | disabled",
        "Rate 3 — Mediocre | disabled",
        "Rate 4 — Weak | disabled",
        "Rate 5 — Hostile | disabled",
        "Default (Cumulative) | expanded=false | state=closed",
        "Badges: default (none) | expanded=false | state=closed",
        "Last name | expanded=false | state=closed",
        "Filter | expanded=false | state=closed",
      ],
      "header": "6 named / 6 est.",
      "level": 0,
      "metrics": [
        "Ph=67%",
        "Em=67%",
        "Lead=—",
        "Net=17%",
        "Members=67%",
        "OA Members=50%",
        "Delegates=0%",
        "Activists=0%",
        "Contacts=0%",
        "HSRs=0%",
        "Bargaining reps=0%",
        "MUA=1",
        "Avg rating=3.5",
        "Participation (supportive)=17%",
        "Workers=6",
      ],
      "overflow": null,
      "placeholders": 0,
      "ratingsBar": "Rating 2: 1 (17%) | Rating 4–5: 1 (17%) | Unrated: 4 (67%)",
      "tiles": [
        {
          "badge": "MUA",
          "disabled": true,
          "draggable": false,
          "ouId": "20",
          "selected": false,
          "title": "Eve Evans. Cumulative 5, last activity 5. MUA: Maritime Union.",
          "worker": "105 Eve Evans",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "20",
          "selected": false,
          "title": "Finn Foster. Cumulative —, last activity —.",
          "worker": "106 Finn Foster",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "20",
          "selected": false,
          "title": "Gina Grant. Cumulative 2, last activity 3. Also in: Acme North.",
          "worker": "107 Gina Grant",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "20",
          "selected": false,
          "title": "Ida Irwin. Cumulative —, last activity —. Background uses default 2 (member) for colour only.",
          "worker": "109 Ida Irwin",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "20",
          "selected": false,
          "title": "Jack Jones. Cumulative —, last activity —. Background uses default 2 (member) for colour only.",
          "worker": "110 Jack Jones",
        },
        {
          "badge": "",
          "disabled": true,
          "draggable": false,
          "ouId": "20",
          "selected": false,
          "title": "Kim King. Cumulative —, last activity —.",
          "worker": "111 Kim King",
        },
      ],
      "title": "Port Alpha",
      "type": "Worksite",
    },
  ],
  "controls": [
    "Employer (4 units) | expanded=false | state=closed",
    "Expand assessment distribution",
    "Print",
  ],
  "counts": [
    "unit-cards=5",
    "top-level-units=3",
    "tiles=8",
    "placeholders=7",
    "bands=[Employer· 1 unit, Worksite· 1 unit]",
    "empty-state=none",
  ],
  "queryKeys": [
    "["assessment-dist-ous","1","assignments",""]",
    "["assessment-dist-ous","1","assignments","10,11,12,13,20"]",
    "["assessment-dist-ous","1"]",
    "["campaign","1"]",
    "["campaign-activities","1","assessment"]",
    "["campaign-activities","1"]",
    "["campaign-activity-ratings","1",""]",
    "["campaign-activity-ratings-dist","1",""]",
    "["campaign-activity-ratings-dist","1","501"]",
    "["campaign-assessment-ambition-targets","1",""]",
    "["campaign-assessment-ambition-targets","1","501"]",
    "["campaign-assessments-rated","1"]",
    "["campaign-data-fields","1"]",
    "["campaign-facts","1","all"]",
    "["campaign-member-ids","1"]",
    "["campaign-members-full","1"]",
    "["campaign-ous","1"]",
    "["campaign-ous-for-create-dialog","1"]",
    "["campaign-rating-summary","1"]",
    "["campaign-worker-list-activity",1]",
    "["campaign-worker-ou","1",""]",
    "["campaign-worker-ou","1","10,11,12,13,20"]",
    "["coverage-map","1"]",
    "["employer-worksite-roles-current"]",
    "["employers-active"]",
    "["hint-dismissals","test-user"]",
    "["import-campaign-ous",1]",
    "["leader-links","campaign","1"]",
    "["leader-links-existing-followers","1",0]",
    "["member-role-types"]",
    "["occupation-aliases-all"]",
    "["occupations-all"]",
    "["rating-levels"]",
    "["specialisations-all"]",
    "["split-unit-members","none",""]",
    "["union-membership-types"]",
    "["wallchart-activities-list","1"]",
    "["wallchart-latest-activity","1"]",
    "["wallchart-participation","1","any",null]",
    "["wallchart-task-lists-list","1"]",
    "["woc-representation-by-unit","1"]",
    "["worker-import-assessments",1]",
    "["worker-list","1",null]",
    "["worker-lists","1"]",
    "["worksites-all"]",
  ],
  "regions": [
    "card-title:Wall chart",
    "summary",
    "units:5",
    "charts",
    "dialogs:none",
  ],
}
`;
